traversal.snake.Snake.scala.error
Compilation error:
Snake:30: error: type mismatch;
 found   : Unit
 required: Boolean
  }
  ^